feat(ui): add base layout for JournalEntry view with table and buttons
- Created JournalEntryView.fxml with TableView and placeholder buttons
- Added JournalEntryController with empty action methods
- Connected FXML to TraderJournalGui launcher